# lyraDiff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  setup.py
src/lyradiff/kernels/: CMakeLists.txt  activation_kernels.cu  activation_kernels.h  reduce_kernel_utils.cuh
src/lyradiff/kernels/basic/: CMakeLists.txt  common_ops.cu  common_ops.h  gemm.cu  gemm.h  softmax.h
src/lyradiff/kernels/basic_transformer/: CMakeLists.txt  basic_transformer_kernels.cu  basic_transformer_kernels.h  ffn_kernels.cu  ffn_kernels.h  fused_geglu_kernel.cu  fused_geglu_kernel.h  int8SQ.cu  int8SQ.h
src/lyradiff/kernels/controlnet/: CMakeLists.txt  residual.cu  residual.h
src/lyradiff/kernels/cross_attn_upblock_2d/: CMakeLists.txt  cat_kernels.cu  cat_kernels.h
src/lyradiff/kernels/cutlass_kernels/: CMakeLists.txt  cutlass_heuristic.cpp  cutlass_heuristic.h  cutlass_preprocessors.cpp  cutlass_preprocessors.h  cutlass_type_conversion.h
src/lyradiff/kernels/down_encoder_block_2d/: CMakeLists.txt  down_encoder_block_2d_kernels.cu  down_encoder_block_2d_kernels.h
src/lyradiff/kernels/flux_single_transformer_block/: CMakeLists.txt  flux_single_transformer_kernels.cu  flux_single_transformer_kernels.h
src/lyradiff/kernels/flux_transformer_block/: CMakeLists.txt  flux_transformer_kernels.cu  flux_transformer_kernels.h
src/lyradiff/kernels/interpolate/: CMakeLists.txt  interpolate.cu  interpolate.h
src/lyradiff/kernels/lora/: CMakeLists.txt  load_lora.cu  load_lora.h
src/lyradiff/kernels/mid_block_2d/: CMakeLists.txt  add_bias.cu  add_bias.h  softmax.cu  softmax.h
src/lyradiff/kernels/norms/: CMakeLists.txt  group_norm.cu  group_norm.h  layer_norm.cu  layer_norm.h  rms_norm.cu  rms_norm.h
src/lyradiff/kernels/quant_kernels/: CMakeLists.txt  ffn_kernels_int8.cu  ffn_kernels_int8.h  int8_utils.cuh  layer_norm_int8.cu  layer_norm_int8.h  quant_kernels.cu  quant_kernels.h
src/lyradiff/kernels/resnet2d/: CMakeLists.txt  resnet2d_kernels.cu  resnet2d_kernels.h
src/lyradiff/kernels/rope/: CMakeLists.txt  flux_apply_rope.cu  flux_apply_rope.h
src/lyradiff/kernels/time_proj/: CMakeLists.txt  time_proj_kernels.cu  time_proj_kernels.h
src/lyradiff/kernels/timestep_embedding/: CMakeLists.txt  ffn_kernels.cu  ffn_kernels.h
src/lyradiff/kernels/w4a4_gemm/: CMakeLists.txt  w4a4_gemm.cu  w4a4_gemm.h
src/lyradiff/kernels/zero_sft/: CMakeLists.txt  zero_sft_kernels.cu  zero_sft_kernels.h
src/lyradiff/layers/: BaseLayer.h  CMakeLists.txt
src/lyradiff/layers/ada_layer_norm/: AdaFP8LayerNorm.cc  AdaFP8LayerNorm.h  AdaFP8LayerNormWeight.cc  AdaFP8LayerNormWeight.h  AdaLayerNorm.cc  AdaLayerNorm.h  AdaLayerNormWeight.cc  AdaLayerNormWeight.h  CMakeLists.txt
src/lyradiff/layers/attention/: CMakeLists.txt
src/lyradiff/layers/basic_transformer/: BasicTransformerBlock.cc  BasicTransformerBlock.h  BasicTransformerBlockWeight.cc  BasicTransformerBlockWeight.h  BasicTransformerInt8Block.cc  BasicTransformerInt8Block.h  BasicTransformerInt8BlockWeight.cc  BasicTransformerInt8BlockWeight.h  CMakeLists.txt  CrossAttentionFunc.cc  CrossAttentionFunc.h
src/lyradiff/layers/combined_timestep_guidance_text_proj_embeddings_block/: CMakeLists.txt  CombinedTimestepGuidanceTextProjEmbeddings.cc  CombinedTimestepGuidanceTextProjEmbeddings.h  CombinedTimestepGuidanceTextProjEmbeddingsWeight.cc  CombinedTimestepGuidanceTextProjEmbeddingsWeight.h
src/lyradiff/layers/controlnet_conditioning_embedding/: CMakeLists.txt  ControlNetConditioningEmbedding.cu  ControlNetConditioningEmbedding.h  ControlNetConditioningEmbeddingWeight.cc  ControlNetConditioningEmbeddingWeight.h
src/lyradiff/layers/controlnet_final_conv/: CMakeLists.txt  ControlNetFinalConv.cc  ControlNetFinalConv.h  ControlNetFinalConvWeight.cc  ControlNetFinalConvWeight.h
src/lyradiff/layers/conv2d/: CMakeLists.txt  conv2d.cc  conv2d.h
src/lyradiff/layers/cross_attn_downblock_2d/: CMakeLists.txt  CrossAttnDownBlock2d.cc  CrossAttnDownBlock2d.h  CrossAttnDownBlock2dWeight.cc  CrossAttnDownBlock2dWeight.h  XLCrossAttnDownBlock2d.cc  XLCrossAttnDownBlock2d.h  XLCrossAttnDownBlock2dWeight.cc  XLCrossAttnDownBlock2dWeight.h
src/lyradiff/layers/cross_attn_upblock_2d/: CMakeLists.txt  CrossAttnUpBlock2d.cc  CrossAttnUpBlock2d.h  CrossAttnUpBlock2dWeight.cc  CrossAttnUpBlock2dWeight.h  GLVCrossAttnUpBlock2d.cc  GLVCrossAttnUpBlock2d.h  GLVCrossAttnUpBlock2dWeight.cc  GLVCrossAttnUpBlock2dWeight.h  XLCrossAttnUpBlock2d.cc  XLCrossAttnUpBlock2d.h  XLCrossAttnUpBlock2dWeight.cc  XLCrossAttnUpBlock2dWeight.h
src/lyradiff/layers/down_block_2d/: CMakeLists.txt  DownBlock2D.cc  DownBlock2D.h  DownBlock2DWeight.cc  DownBlock2DWeight.h  XLDownBlock2D.cc  XLDownBlock2D.h  XLDownBlock2DWeight.cc  XLDownBlock2DWeight.h
src/lyradiff/layers/down_encoder_block_2d/: CMakeLists.txt  DownEncoderBlock2D.cc  DownEncoderBlock2D.h  DownEncoderBlock2DWeight.cc  DownEncoderBlock2DWeight.h
src/lyradiff/layers/flash_attn2/: CMakeLists.txt  flash.h  flash_attn2.cu  flash_attn2.h  flash_attn2_fwd.cu  flash_attn2_fwd.h  flash_cuda_utils.cu  flash_cuda_utils.h  flash_fwd_hdim128_bf16_sm80.cu  flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_hdim160_bf16_sm80.cu  flash_fwd_hdim160_fp16_sm80.cu  flash_fwd_hdim192_bf16_sm80.cu  flash_fwd_hdim192_fp16_sm80.cu  flash_fwd_hdim224_bf16_sm80.cu  flash_fwd_hdim224_fp16_sm80.cu  (+16 more)
src/lyradiff/models/: CMakeLists.txt
src/lyradiff/th_op/: CMakeLists.txt  pybind.cc  th_utils.cu  th_utils.h
src/lyradiff/utils/: CMakeLists.txt  Tensor.cc  Tensor.h  activation_types.h  allocator.h  auth_utils.h  common_macro_def.h  common_name_def.h  context.h  convert_data_type.h  cublasAlgoMap.cc  cublasAlgoMap.h  cublasMMWrapper.cc  cublasMMWrapper.h  cudaDriverWrapper.cc  cudaDriverWrapper.h  cuda_bf16_fallbacks.cuh  cuda_bf16_wrapper.h  cuda_fp8_utils.cu  cuda_fp8_utils.h  cuda_type_utils.cuh  cuda_utils.cc  cuda_utils.h  helper_math.h  logger.cc  logger.h  lyraException.cc  lyraException.h  memory_utils.cu  memory_utils.h  quantization.h  string_utils.h  tensor_helper.cu  tensor_helper.h  test_utils.cc  test_utils.h  workspace.h
(+678 files in other folders)
