cmake_minimum_required(VERSION 3.8)

add_library(activation STATIC activation_kernels.cu)
set_property(TARGET activation PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET activation PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)

add_subdirectory(norms)
add_subdirectory(basic)
add_subdirectory(basic_transformer)
add_subdirectory(timestep_embedding)
add_subdirectory(resnet2d)
add_subdirectory(cross_attn_upblock_2d)
add_subdirectory(interpolate)
add_subdirectory(time_proj)
add_subdirectory(controlnet)
add_subdirectory(lora)
add_subdirectory(mid_block_2d)
add_subdirectory(down_encoder_block_2d)
add_subdirectory(zero_sft)
add_subdirectory(cutlass_kernels)
add_subdirectory(quant_kernels)
add_subdirectory(rope)
add_subdirectory(flux_single_transformer_block)
add_subdirectory(flux_transformer_block)
add_subdirectory(w4a4_gemm)
