cmake_minimum_required(VERSION 3.8)

add_subdirectory(attention)
add_subdirectory(text_timeembedding_block)
add_subdirectory(image_proj)
add_subdirectory(timestep_embedding_block)
add_subdirectory(basic_transformer)
add_subdirectory(transformer2d)
add_subdirectory(resnet2d)
add_subdirectory(conv2d)
add_subdirectory(cross_attn_downblock_2d)
add_subdirectory(down_block_2d)
add_subdirectory(unet_mid_block_2d_cross_attn)
add_subdirectory(cross_attn_upblock_2d)
add_subdirectory(upblock2d)
add_subdirectory(flash_attn2)
add_subdirectory(time_proj)
add_subdirectory(controlnet_conditioning_embedding)
add_subdirectory(controlnet_final_conv)
add_subdirectory(unet_mid_block_2d)
add_subdirectory(up_decoder_block_2d)
add_subdirectory(vae_decoder)
add_subdirectory(down_encoder_block_2d)
add_subdirectory(vae_encoder)
add_subdirectory(zero_sft)
add_subdirectory(zero_cross_attn)
add_subdirectory(gemm_utils)
add_subdirectory(combined_timestep_guidance_text_proj_embeddings_block)
add_subdirectory(ada_layer_norm)
add_subdirectory(flux_single_attention_processor)
add_subdirectory(flux_single_transformer_block)
add_subdirectory(flux_attention_processor)
add_subdirectory(flux_attn_post_processor)
add_subdirectory(flux_transformer_block)
add_subdirectory(w4a4_gemm_block)
