cmake_minimum_required(VERSION 3.8)

add_subdirectory(unet_2d_conditional_model)
add_subdirectory(controlnet_model)
add_subdirectory(vae_model)
add_subdirectory(xlunet_2d_conditional_model)
add_subdirectory(xl_controlnet_model)
add_subdirectory(glv_unet_2d_conditional_model)
add_subdirectory(flux_transformer_2d_model)
add_subdirectory(flux_controlnet_model)
