cmake_minimum_required(VERSION 3.8)

add_library(CrossAttnUpBlock2dWeight STATIC CrossAttnUpBlock2dWeight.cc)
set_property(TARGET CrossAttnUpBlock2dWeight PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET CrossAttnUpBlock2dWeight PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(CrossAttnUpBlock2dWeight PUBLIC Resnet2DBlockWeight Transformer2dBlockWeight load_lora)

add_library(CrossAttnUpBlock2d STATIC CrossAttnUpBlock2d.cc) 
set_property(TARGET CrossAttnUpBlock2d PROPERTY POSITION_INDEPENDENT_CODE ON)
set_property(TARGET CrossAttnUpBlock2d PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS ON) 
target_link_libraries(CrossAttnUpBlock2d PUBLIC conv2d interpolate cat_kernels Resnet2DBlock Transformer2dBlock CrossAttnUpBlock2dWeight)

add_library(XLCrossAttnUpBlock2dWeight STATIC XLCrossAttnUpBlock2dWeight.cc)
set_property(TARGET XLCrossAttnUpBlock2dWeight PROPERTY POSITION_INDEPENDENT_CODE ON)
set_property(TARGET XLCrossAttnUpBlock2dWeight PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS ON)
target_link_libraries(XLCrossAttnUpBlock2dWeight PUBLIC Resnet2DBlockWeight XLTransformer2dBlockWeight)

add_library(XLCrossAttnUpBlock2d STATIC XLCrossAttnUpBlock2d.cc)
set_property(TARGET XLCrossAttnUpBlock2d PROPERTY POSITION_INDEPENDENT_CODE ON)
set_property(TARGET XLCrossAttnUpBlock2d PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS ON)
target_link_libraries(XLCrossAttnUpBlock2d PUBLIC conv2d interpolate cat_kernels Resnet2DBlock XLTransformer2dBlock XLCrossAttnUpBlock2dWeight)

add_library(GLVCrossAttnUpBlock2dWeight STATIC GLVCrossAttnUpBlock2dWeight.cc)
set_property(TARGET GLVCrossAttnUpBlock2dWeight PROPERTY POSITION_INDEPENDENT_CODE ON)
set_property(TARGET GLVCrossAttnUpBlock2dWeight PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS ON)
target_link_libraries(GLVCrossAttnUpBlock2dWeight PUBLIC ZeroSFTWeight ZeroCrossAttnWeight Resnet2DBlockWeight XLTransformer2dBlockWeight)

add_library(GLVCrossAttnUpBlock2d STATIC GLVCrossAttnUpBlock2d.cc)
set_property(TARGET GLVCrossAttnUpBlock2d PROPERTY POSITION_INDEPENDENT_CODE ON)
set_property(TARGET GLVCrossAttnUpBlock2d PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS ON)
target_link_libraries(GLVCrossAttnUpBlock2d PUBLIC conv2d ZeroSFT ZeroCrossAttn interpolate cat_kernels Resnet2DBlock XLTransformer2dBlock GLVCrossAttnUpBlock2dWeight)
