cmake_minimum_required(VERSION 3.8)

add_library(FluxAttentionProcessorWeight STATIC FluxAttentionProcessorWeight.cc)

set_property(TARGET FluxAttentionProcessorWeight PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxAttentionProcessorWeight PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxAttentionProcessorWeight PUBLIC cuda_utils load_lora logger memory_utils)

add_library(FluxAttentionProcessor STATIC FluxAttentionProcessor.cc)

set_property(TARGET FluxAttentionProcessor PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxAttentionProcessor PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxAttentionProcessor PUBLIC FluxAttentionProcessorWeight flux_transformer_kernels flash_attention_v2 activation cuda_utils logger memory_utils flux_apply_rope common_ops)

add_library(FluxAttentionFP8ProcessorWeight STATIC FluxAttentionFP8ProcessorWeight.cc)

set_property(TARGET FluxAttentionFP8ProcessorWeight PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxAttentionFP8ProcessorWeight PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxAttentionFP8ProcessorWeight PUBLIC FluxAttentionProcessorWeight cuda_utils load_lora logger memory_utils)

add_library(FluxAttentionFP8Processor STATIC FluxAttentionFP8Processor.cc)

set_property(TARGET FluxAttentionFP8Processor PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxAttentionFP8Processor PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxAttentionFP8Processor PUBLIC FluxAttentionFP8ProcessorWeight FluxAttentionProcessor flux_transformer_kernels flash_attention_v2 activation cuda_utils logger memory_utils flux_apply_rope common_ops)

add_library(FluxAttentionInt4ProcessorWeight STATIC FluxAttentionInt4ProcessorWeight.cc)

set_property(TARGET FluxAttentionInt4ProcessorWeight PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxAttentionInt4ProcessorWeight PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxAttentionInt4ProcessorWeight PUBLIC FluxAttentionProcessorWeight cuda_utils load_lora logger memory_utils)

add_library(FluxAttentionInt4Processor STATIC FluxAttentionInt4Processor.cc)

set_property(TARGET FluxAttentionInt4Processor PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxAttentionInt4Processor PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxAttentionInt4Processor PUBLIC FluxAttentionInt4ProcessorWeight flux_single_transformer_kernels FluxAttentionProcessor W4A4Gemm flux_transformer_kernels flash_attention_v2 activation cuda_utils logger memory_utils flux_apply_rope common_ops)
