cmake_minimum_required(VERSION 3.8)

add_library(FluxSingleAttentionProcessorWeight STATIC FluxSingleAttentionProcessorWeight.cc)

set_property(TARGET FluxSingleAttentionProcessorWeight PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxSingleAttentionProcessorWeight PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxSingleAttentionProcessorWeight PUBLIC cuda_utils load_lora logger memory_utils)

add_library(FluxSingleAttentionProcessor STATIC FluxSingleAttentionProcessor.cc)

set_property(TARGET FluxSingleAttentionProcessor PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxSingleAttentionProcessor PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxSingleAttentionProcessor PUBLIC FluxSingleAttentionProcessorWeight flash_attention_v2 activation cuda_utils logger memory_utils flux_apply_rope common_ops)

add_library(FluxSingleAttentionFP8ProcessorWeight STATIC FluxSingleAttentionFP8ProcessorWeight.cc)

set_property(TARGET FluxSingleAttentionFP8ProcessorWeight PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxSingleAttentionFP8ProcessorWeight PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxSingleAttentionFP8ProcessorWeight PUBLIC FluxSingleAttentionProcessorWeight cuda_utils load_lora logger memory_utils)

add_library(FluxSingleAttentionFP8Processor STATIC FluxSingleAttentionFP8Processor.cc)

set_property(TARGET FluxSingleAttentionFP8Processor PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxSingleAttentionFP8Processor PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxSingleAttentionFP8Processor PUBLIC FluxSingleAttentionFP8ProcessorWeight FluxSingleAttentionProcessor flash_attention_v2 activation cuda_utils logger memory_utils flux_apply_rope common_ops)


add_library(FluxSingleAttentionInt4ProcessorWeight STATIC FluxSingleAttentionInt4ProcessorWeight.cc)

set_property(TARGET FluxSingleAttentionInt4ProcessorWeight PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxSingleAttentionInt4ProcessorWeight PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxSingleAttentionInt4ProcessorWeight PUBLIC FluxSingleAttentionProcessorWeight W4A4GemmWeight cuda_utils load_lora logger memory_utils)

add_library(FluxSingleAttentionInt4Processor STATIC FluxSingleAttentionInt4Processor.cc)

set_property(TARGET FluxSingleAttentionInt4Processor PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxSingleAttentionInt4Processor PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxSingleAttentionInt4Processor PUBLIC FluxSingleAttentionInt4ProcessorWeight W4A4Gemm FluxSingleAttentionProcessor flash_attention_v2 activation cuda_utils logger memory_utils flux_apply_rope common_ops)