cmake_minimum_required(VERSION 3.8)

add_library(FluxSingleTransformerBlockWeight STATIC FluxSingleTransformerBlockWeight.cc)

set_property(TARGET FluxSingleTransformerBlockWeight PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxSingleTransformerBlockWeight PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxSingleTransformerBlockWeight PUBLIC memory_utils FluxSingleAttentionProcessorWeight cuda_utils load_lora logger memory_utils)

add_library(FluxSingleTransformerBlock STATIC FluxSingleTransformerBlock.cc)

set_property(TARGET FluxSingleTransformerBlock PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxSingleTransformerBlock PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxSingleTransformerBlock PUBLIC FluxSingleTransformerBlockWeight FluxSingleAttentionProcessor AdaLayerNorm flux_single_transformer_kernels activation cuda_utils logger memory_utils flux_apply_rope common_ops)

add_library(FluxSingleTransformerFP8BlockWeight STATIC FluxSingleTransformerFP8BlockWeight.cc)

set_property(TARGET FluxSingleTransformerFP8BlockWeight PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxSingleTransformerFP8BlockWeight PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxSingleTransformerFP8BlockWeight PUBLIC memory_utils FluxSingleAttentionFP8ProcessorWeight FluxSingleTransformerBlockWeight cuda_utils load_lora logger memory_utils)

add_library(FluxSingleTransformerFP8Block STATIC FluxSingleTransformerFP8Block.cc)

set_property(TARGET FluxSingleTransformerFP8Block PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxSingleTransformerFP8Block PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxSingleTransformerFP8Block PUBLIC FluxSingleTransformerFP8BlockWeight FluxSingleTransformerBlock FluxSingleAttentionFP8Processor AdaFP8LayerNorm flux_single_transformer_kernels activation cuda_utils logger memory_utils flux_apply_rope common_ops)

add_library(FluxSingleTransformerInt4BlockWeight STATIC FluxSingleTransformerInt4BlockWeight.cc)

set_property(TARGET FluxSingleTransformerInt4BlockWeight PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxSingleTransformerInt4BlockWeight PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxSingleTransformerInt4BlockWeight PUBLIC memory_utils FluxSingleAttentionInt4ProcessorWeight FluxSingleTransformerBlockWeight FluxSingleAttentionInt4ProcessorWeight cuda_utils load_lora logger memory_utils)

add_library(FluxSingleTransformerInt4Block STATIC FluxSingleTransformerInt4Block.cc)

set_property(TARGET FluxSingleTransformerInt4Block PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET FluxSingleTransformerInt4Block PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(FluxSingleTransformerInt4Block PUBLIC FluxSingleTransformerInt4BlockWeight FluxSingleTransformerBlock FluxSingleAttentionInt4Processor AdaFP8LayerNorm flux_single_transformer_kernels activation cuda_utils logger memory_utils flux_apply_rope common_ops)
